2007-04-22  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Mitz.

        Bug 13437: Inspector does not update when navigating to a different page
        http://bugs.webkit.org/show_bug.cgi?id=13437

        * WebInspector/webInspector/inspector.js: Correctly update to a new root node
          if the new focus node and the old focus node don't have a common ancestor.

2007-04-22  Darin Adler  <darin@apple.com>

        Reviewed by Adele.

        - fix for <rdar://problem/5100240> REGRESSION: Control-O broken

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _interceptEditingKeyEvent:shouldSaveCommand:]): Update to handle a vector of
        command names instead of a single command.
        (-[WebHTMLView doCommandBySelector:]): Change logic so that we add the command to a vector
        and also so that the interpretKeyEvents parameters are still intact for a second call to
        doCommandBySelector:, since the key bindings mechanism can do more than one.
        (-[WebHTMLView insertText:]): Added comment.

2007-04-21  Darin Adler  <darin@apple.com>

        Reviewed by Oliver.

        - fix some problems I ran into using the inspector

        * WebInspector/webInspector/inspector.js: Add some null checks.

2007-04-20  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        Merge over the WebInspectorRefresh branch. This change removes the NSOutlineView and
        is replaced with a HTML/JavaScript tree. Most of the inspector logic is now in the JavaScript.

        A few bugs are fixed by these changes:

        Bug 6615: Parent node drop-down list is upside-down
        http://bugs.webkit.org/show_bug.cgi?id=6615

        Bug 6643: REGRESSION: Tree view repaints lines without erasing them first
        http://bugs.webkit.org/show_bug.cgi?id=6643

        Bug 6650: Web Inspector HTML Hierarchy can't be scrolled with scrollwheel
        http://bugs.webkit.org/show_bug.cgi?id=6650
